--- a/2048.css
+++ b/2048.css
@@ -4,18 +4,18 @@ body{
 header{
     display: block;
     margin:0 auto;
-    width: 500px;
+    width: 100%;
     text-align: center;
 }
 header h1{
     font-family: Arial;
-    font-size: 60px;
+    font-size: 40px;
     font-weight: bold;
     margin: 0;
 }
 header #newgamebutton{
     display:block;
-    margin: 20px auto;
+    margin: 0px auto;
     width: 100px;
     padding:10px 10px;
     background-color: #8f7a66;
