--- a/css/2048.css
+++ b/css/2048.css
@@ -29,8 +29,12 @@ header #newgamebutton:hover{
 }
 header p{
     font-family: Arial;
-    font-size:25px;
-    margin:10px auto;
+    font-size:20px;
+    margin:15px 100px;
+    display: inline-block;
+}
+header p>span{
+    color:#f2b179;
 }
 
 #grid-container{
@@ -58,4 +62,16 @@ header p{
     line-height: 100px;
     text-align: center;
     position: absolute;
+}
+#cover{
+    position:absolute;
+    font-family: Arial;
+    font-size:25px;
+    color: red;
+    background-color: rgba(80,80,80,0.6);
+    display:none;
+    z-index:999;
+    top:0;
+    left: 0;
+    text-align: center;
 }
