--- a/css/2048.css
+++ b/css/2048.css
@@ -14,7 +14,7 @@ header h1{
     margin: 0;
 }
 header #newgamebutton{
-    display:inline-block;
+    display:block;
     margin: 0px auto;
     width: 100px;
     padding:10px 10px;
